--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,6 +7,7 @@
       format("truetype"),
     /* Safari, Android, iOS */ url("/src/assets/font/at10.svg#svgFontName")
       format("svg"); /* Legacy iOS */
+  /* font-display: optional; */
 }
 
 .v-row {
@@ -15,6 +16,11 @@
 
 html {
   /* scroll-behavior: smooth; */
+}
+
+.v-data-table__progress .v-progress-linear__indeterminate.long.primary,
+.v-data-table__progress .v-progress-linear__indeterminate.short.primary {
+  background-color: #e3c8af !important;
 }
 
 * {
@@ -1442,6 +1448,10 @@ input::-webkit-inner-spin-button {
 }
 
 @media (max-width: 599px) {
+  .hideArrowSm .slick-arrow {
+    display: none !important;
+  }
+
   .checkboxFormOpinian {
     width: 100%;
   }
