--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1471,7 +1471,18 @@ input::-webkit-inner-spin-button {
   }
 }
 
+@media (min-width: 600px) {
+  .englishDataTabel td {
+    font-family: "Roboto", sans-serif !important;
+    direction: ltr !important;
+  }
+}
+
 @media (max-width: 599px) {
+  .englishDataTabel td div:nth-child(2) {
+    font-family: "Roboto", sans-serif !important;
+    direction: ltr !important;
+  }
   .topDivVisa {
     top: 50px;
   }
